src/test/error/macro8.lns
pub macro _Test() {
   {
      __var.val = 1; // error
   }
}
